force-app/main/default/objects/Contact/fields/CDC_CAC_Business_Email__c.field-meta.xml
<CustomField>
    <fullName>CDC_CAC_Business_Email__c</fullName>
    <label>Business Email</label>
    <type>Email</type>
</CustomField>