force-app/main/default/objects/Contact/fields/CDC_CAC_Business_Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>CDC_CAC_Business_Trading_Name__c</fullName>
    <label>Business Trading Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>