force-app/main/default/objects/Contact/fields/CDC_CAC_Consent_Given__c.field-meta.xml
<CustomField>
    <fullName>CDC_CAC_Consent_Given__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Given</label>
    <type>Checkbox</type>
</CustomField>