force-app/main/default/objects/Contact/fields/CDC_CAC_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>CDC_CAC_Full_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; + Id,  FirstName + &quot; &quot; +  LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>