force-app/main/default/objects/Contact/fields/CDC_CAC_Integration_Id__c.field-meta.xml
<CustomField>
    <fullName>CDC_CAC_Integration_Id__c</fullName>
    <externalId>true</externalId>
    <label>Integration Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>