force-app/main/default/objects/Contact/fields/CDC_CAC_Interceptor_Flag__c.field-meta.xml
<CustomField>
    <fullName>CDC_CAC_Interceptor_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interceptor Flag</label>
    <type>Checkbox</type>
</CustomField>