force-app/main/default/objects/Contact/fields/CDC_CAC_Interceptor_Id__c.field-meta.xml
<CustomField>
    <fullName>CDC_CAC_Interceptor_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Interceptor Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>