force-app/main/default/objects/Contact/fields/CDC_CAC_Interceptor_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>CDC_CAC_Interceptor_Timestamp__c</fullName>
    <label>Interceptor Timestamp</label>
    <type>DateTime</type>
</CustomField>