force-app/main/default/objects/Contact/fields/CDC_CAC_Last_Name_Native__c.field-meta.xml
<CustomField>
    <fullName>CDC_CAC_Last_Name_Native__c</fullName>
    <label>Last Name Native</label>
    <length>100</length>
    <type>Text</type>
</CustomField>