force-app/main/default/objects/Contact/fields/CDC_CAC_Title__c.field-meta.xml
<CustomField>
    <fullName>CDC_CAC_Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CDC_CAC_Title</valueSetName>
    </valueSet>
</CustomField>