force-app/main/default/objects/Contact/fields/CDC_CAC_VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>CDC_CAC_VAT_Number__c</fullName>
    <label>VAT Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>