force-app/main/default/objects/Contact/fields/Requires_Consent__c.field-meta.xml
<CustomField>
    <fullName>Requires_Consent__c</fullName>
    <formula>MailingCountry = TEXT($CustomMetadata.Customer_Consent_Setting__mdt.Russia.Country__c)</formula>
    <label>Requires Consent</label>
    <type>Checkbox</type>
</CustomField>