force-app/main/default/objects/Contact/fields/Retention_Period_Months__c.field-meta.xml
<CustomField>
    <fullName>Retention_Period_Months__c</fullName>
    <formula>$CustomMetadata.Customer_Consent_Setting__mdt.Russia.Retention_Period__c * 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retention Period Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>