force-app/main/default/objects/Contact/validationRules/Russian_Consent.validationRule-meta.xml
<ValidationRule>
    <fullName>Russian_Consent</fullName>
    <active>true</active>
    <description>Customer Consent is Required for Russian customers.</description>
    <errorConditionFormula>MailingCountry = &apos;Russia&apos; &amp;&amp; CDC_CAC_Consent_Given__c = false</errorConditionFormula>
    <errorDisplayField>CDC_CAC_Consent_Given__c</errorDisplayField>
    <errorMessage>Customer Consent is required for Russian Customers.</errorMessage>
</ValidationRule>