force-app/main/default/objects/Contact/listViews/CDC_CAC_All_Contacts.listView-meta.xml
<ListView>
    <fullName>CDC_CAC_All_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>CDC_CAC_First_Name_Native__c</columns>
    <columns>CDC_CAC_Last_Name_Native__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.ADDRESS2_COUNTRY</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>